javascript-lesson-16-module-8
javascript-lesson-16-module-8

--- a/src/css/01-todo-list.css
+++ b/src/css/01-todo-list.css
@@ -103,6 +103,8 @@ input {
 
 /* Style the "Add" button */
 .addBtn {
+  height: 38.67px;
+  line-height: 16px;
   padding: 10px;
   width: 25%;
   background: #d9d9d9;
